# autonomous-core

autonomous_core/: CMakeLists.txt  package.xml
autonomous_core/launch/: core.launch  robot_description.launch  world.launch
autonomous_core/models/ground/: model.config  model.sdf
autonomous_core/models/ground/materials/scripts/: ground.material
autonomous_core/script/: camera_sub.py
autonomous_core/urdf/: r2d2.xacro
autonomous_core/world/: core.world
autonomous_core/worlds/: core.world
