<?xml version="1.0"?>
<package format="2">
  <name>autonomous_core</name>
  <version>0.0.0</version>
  <description>The autonomous_core package</description>

  <maintainer email="halil@todo.todo">halil</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosmsg</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosmsg</exec_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <export>
      <gazebo_ros gazebo_model_path="${prefix}/models"/>
      <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
